fixes after  review.  Added some Tests for RecommendationService.